Cleanups: - added serial version UID to the classes that implement Serializable - organised imports - reformatted code according to the Eclipse formatter settings file in src/.
git-svn-id: https://svn.codehaus.org/izpack/izpack-src/trunk@1163 7d736ef5-cfd4-0310-9c9a-b52d5c14b761